[gd_scene load_steps=5 format=2]

[ext_resource path="res://abstract-platformer-370-assets/PNG/Tiles/Brown tiles/tileBrown_27.png" type="Texture" id=1]
[ext_resource path="res://Trash.gd" type="Script" id=2]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Items/outlineDisc_alt.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.1366, 32.3729 )

[node name="Trash" type="RigidBody2D" groups=[
"trash",
]]
input_pickable = true
gravity_scale = 2.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="mouse_over" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Trash_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Trash_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
